# low-level-designs

Course-Registration-System/: CMakeLists.txt  Course.cpp  Course.h  CourseCode.h  Instructor.cpp  Instructor.h  Person.h  RegistrationSystem.cpp  RegistrationSystem.h  Student.cpp  Student.h  main.cpp
Elevator-System/: CMakeLists.txt  CommonAll.h  Elevator.cpp  Elevator.h  ElevatorSystem.cpp  ElevatorSystem.h  Request.cpp  Request.h  User.cpp  User.h
Logging-Framework/: CMakeLists.txt  Common.h  Debug.cpp  Debug.h  Error.cpp  Error.h  Fatal.cpp  Fatal.h  Info.cpp  Info.h  LogHandler.h  Warning.cpp  Warning.h  main.cpp
MovieBookingSystem/: BookingStatus.h  BookingSystem.cpp  BookingSystem.h  CMakeLists.txt  Hall.cpp  Hall.h  HallInterface.h  Location.cpp  Location.h  LocationInterface.h  Movie.cpp  Movie.h  MovieInterface.h  Reservation.cpp  Reservation.h  SeatInterface.h  Seats.cpp  Seats.h  Threatre.cpp  Threatre.h  ThreatreInterface.h  User.cpp  User.h  UserInterface.h  main.cpp
Parking-Lot-System/: CMakeLists.txt  main.cpp
